# liblightning

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  Lightning.go  Makefile  Makefile.am  Makefile.bak  Makefile.in  Metro.go  README  README.md  Vagrantfile  add  add_buffers.c  add_buffers.h  ar.mk  audio-engine.c  audio-engine.h  bin-tree.c  bin-tree.h  capture_client  capture_client.c  clip.c  clip.h  conf.py  config.h  config.h.in  config.status  configure  configure.ac  doc.mk  event.c  event.h  export  export-thread.c  export-thread.h  flags.mk  gain.c  gain.h  (+101 more)
.deps/: liblightning_la-atom.Plo  liblightning_la-bin-tree.Plo  liblightning_la-clip.Plo  liblightning_la-event.Plo  liblightning_la-export-thread.Plo  liblightning_la-jack-client.Plo  liblightning_la-lightning.Plo  liblightning_la-log.Plo  liblightning_la-mem.Plo  liblightning_la-mutex.Plo  liblightning_la-realtime.Plo  liblightning_la-ringbuffer.Plo  liblightning_la-sample-ram.Plo  liblightning_la-sample.Plo  liblightning_la-samples.Plo  liblightning_la-sf.Plo  liblightning_la-src.Plo  liblightning_la-thread.Plo
.libs/: liblightning-0.1.0.so.0  liblightning-0.1.0.so.0.0.0  liblightning.lai
audio/: ATTRIBUTIONS  kick.flac  snap.flac
autom4te.cache/: output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
examples/: Makefile  Makefile.am  Makefile.in  includes.h  lightning-play-sample.c  lightning_play_sample  lightning_play_sample.c  luaclient.c  luahelpers.h  luaserver.c  metro.c  metro.go  play-file.c  play-metro.c  play-pattern.c  play-sample.c  play_file  play_file.c  play_sample  play_sample.c  webs.c  zhelpers.h
examples/.deps/: lightning-play-sample.Po  lightning_play_sample.Po  play_file.Po  play_sample.Po
examples/.libs/: lightning_play_sample  lt-play_sample  play_file  play_sample
kits/default/: .kit  ATTRIBUTIONS  marvie_baaaa_01.flac  marvie_goooo_ckssh.flac  rusty_shears.flac
lightning/: lightning.h
test/: Makefile  check-json.c  check-list.c  check-metro.c  run
