bin_PROGRAMS =                          \
    lightning_play_sample               \
    play_sample                         \
    play_file

lightning_play_sample_LDFLAGS = -L../.libs
lightning_play_sample_LDADD = -llightning

play_sample_LDFLAGS = -L../.libs
play_sample_LDADD = -llightning

play_file_LDFLAGS = -L../.libs
play_file_LDADD = -llightning
